--- a/index.html
+++ b/index.html
@@ -108,55 +108,41 @@
     </section>
 
     <!-- skills section start -->
-    <section class="skills" id="skills">
+
+    <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">TECH STACK</h2>
-            <div class="skills-content">
-                <div class="column left">
-
-                    <div class="skills-images" id="java_img">
-                        <img src="./images/java.svg" alt="javaSvg">
-                    </div>
-
-                    <div class="skills-images" id="hibernate_img">
-                        <img src="./images/hibernatesvg.svg" alt="">
-                    </div>
-
-                    
-                    <div class="skills-images">
-                        <img src="./images/mysql.svg" alt="">
-                    </div>
-
-                    
-                    <div class="skills-images" id="github_img">
-                        <img src="./images/github.svg" alt="">
-                    </div>
-
+            <h2 class="title">Skills</h2>
+            <div class="tools">
+                <div class="tool tool-img-s tool-img-s-java ">
+                    <img src="./images/java.svg" alt="">
                 </div>
-                <div class="column right">
-                    <div class="skills-images" id="spring_img">
-                        <img src="./images/spring.svg" alt="">
-                    </div>
-
-                    <div class="skills-images" id="aws_img">
-                        <img src="./images/aws.svg" alt="">
-                    </div>
-
-                    <div class="skills-images" id="html_img">
-                        <img src="./images/html.svg" alt="">
-                    </div>
-
-                    <div class="skills-images" id="js_img" >
-                        <img src="./images/javascript.svg" alt="">
-                    </div>
-
+                <div class="tool tool-img-s">
+                    <img src="./images/hibernatesvg.svg" alt="">
+                </div>
+                <div class="tool tool-img-s">
+                    <img src="./images/mysql.svg" alt="">
+                </div>
+                <div class="tool tool-img-s">
+                    <img src="./images/github.svg" alt="">
+                </div>
+                <div class="tool tool-img-s">
+                    <img src="./images/spring.svg" alt="">
+                </div>
+                <div class="tool tool-img-s tool-img-s-java">
+                    <img src="./images/postman.svg" alt="">
+                </div>
+                <div class="tool tool-img-s tool-img-s-java">
+                    <img src="./images/aws.svg " alt="">
+                </div>
+                <div class="tool ">
+                    <img src="./images/html.svg" alt="">
+                </div>
+                <div class="tool">
+                    <img src="./images/javascript.svg" alt="">
                 </div>
             </div>
         </div>
     </section>
-
-
-
 
 
     <section>
@@ -200,7 +186,6 @@
                         <img src="./images/nordstromRack.png" alt="">
                         <div class="text">Nordstromrack Clone </div>
                         <p>Nordstromrack is an Indian e-commerce website which provides the facility of Shopping online for shoes, clothing, jewelry, dresses, makeup and more from top brands at.</p>
-                        <!-- <p class="techStack"><b class="techStack1">Tech Stack</b>: HTML | CSS | JavaScript </p> -->
                         <div class="card-body">
                             <h3>Tech Stack</h3>
                             <i class="fa-brands fa-html5"></i>
@@ -223,7 +208,6 @@
                         <img src="./images/travelVelocity.png" alt="">
                         <div class="text">Travelocity</div>
                         <p>Travelocity.com is an online travel agency owned by Expedia Group. It has 12.4 million monthly unique visitors, making it the third most popular website owned by Expedia Group, after Expedia.com and Hotels.com. </p>
-                        <!-- <p class="techStack"><b class="techStack1">Tech Stack</b>: Html, CSS, JavaScript</p> -->
                         <div class="card-body">
                             <h3>Tech Stack</h3>
                             <i class="fa-brands fa-html5"></i>
@@ -246,7 +230,6 @@
                         <img src="./images/styleCraze.png" alt="">
                         <div class="text">Stylecraze</div>
                         <p>StyleCraze is a global women's platform that aims to answer one question: what do women want? From health and wellness to lifestyle and beauty . StyleCraze is the largest online community for women </p>
-                        <!-- <p class="techStack"><b class="techStack1">Tech Stack</b>: Html, CSS, JavaScript</p> -->
                         <div class="card-body">
                             <h3>Tech Stack</h3>
                             <i class="fa-brands fa-html5"></i>
@@ -269,7 +252,6 @@
                         <img src="./images/ERDiagram.png" alt="">
                         <div class="text">Payment Application</div>
                         <p>Payment Wallet Application in Java using Spring Boot with Source Code. This is a restful service for the payment wallet application with all necessary APIs. This project is developed to allow customers to make payments using wallets while making any purchase.</p>
-                        <!-- <p class="techStack"><b class="techStack1">Tech Stack</b>: Java , Spring , Spring Boot , Hibernate , MySql</p> -->
                         <div class="card-body">
                             <h3>Tech Stack</h3>
                             <i class="fa-brands fa-java"></i>
@@ -288,7 +270,7 @@
 
 
 
-                       </div>
+            </div>
         </div>
     </section>
 
