--- a/index.html
+++ b/index.html
@@ -46,12 +46,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Mayank Saxena</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a  target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="" >
-              <!-- <button id="DownloadResumeBtn"> -->
-                Download Resume
-                <!-- <DownloadIcon /> -->
-              <!-- </button> -->
-            </a>
+                <a id="resumeDownload"  target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="fw19_1145_Mayank_Saxena_Resume" > Download Resume </a>
             </div>
         </div>
     </section>
@@ -111,34 +106,61 @@
 
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">Skills</h2>
+            <h2 class="title">Tech-Stack</h2>
             <div class="tools">
                 <div class="tool tool-img-s tool-img-s-java ">
-                    <img src="./images/java.svg" alt="">
+                    <img src="./images/java.png" alt="">
+                    <h3>Java</h3>
                 </div>
                 <div class="tool tool-img-s">
-                    <img src="./images/hibernatesvg.svg" alt="">
+                    <img src="./images/hibernate.png" alt="">
+                    <h3>Hibernate</h3>
                 </div>
                 <div class="tool tool-img-s">
-                    <img src="./images/mysql.svg" alt="">
-                </div>
-                <div class="tool tool-img-s">
-                    <img src="./images/github.svg" alt="">
-                </div>
-                <div class="tool tool-img-s">
-                    <img src="./images/spring.svg" alt="">
-                </div>
-                <div class="tool tool-img-s tool-img-s-java">
-                    <img src="./images/postman.svg" alt="">
-                </div>
-                <div class="tool tool-img-s tool-img-s-java">
-                    <img src="./images/aws.svg " alt="">
+                    <img src="./images/spring boot.jfif" alt="">
+                    <h3>Spring Boot</h3>
                 </div>
                 <div class="tool ">
-                    <img src="./images/html.svg" alt="">
+                    <img src="./images/html1.png" alt="">
+                    <h3>HTML</h3>
                 </div>
                 <div class="tool">
-                    <img src="./images/javascript.svg" alt="">
+                    <img src="./images/css.svg" alt="">
+                    <h3>CSS</h3>
+                </div>
+                <div class="tool">
+                    <img src="./images/javascript.svg   " alt="">
+                    <h3>JavaScript</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="max-width tools-down">
+            <h2 class="title">Tools</h2>
+            <div class="tools">
+                <div class="tool tool-img-s tool-img-s-java ">
+                    <img src="./images/int.jfif" alt="">
+                    <h3>Java</h3>
+                </div>
+                <div class="tool tool-img-s">
+                    <img src="./images/spring tool.jfif" alt="">
+                    <h3>Hibernate</h3>
+                </div>
+                <div class="tool tool-img-s">
+                    <img src="./images/sql.png" alt="">
+                    <h3>Spring Boot</h3>
+                </div>
+                <div class="tool ">
+                    <img src="./images/vscode.jfif" alt="">
+                    <h3>HTML</h3>
+                </div>
+                <div class="tool">
+                    <img src="./images/git.png" alt="">
+                    <h3>CSS</h3>
+                </div>
+                <div class="tool">
+                    <img src="./images/github.png" alt="">
+                    <h3>JavaScript</h3>
                 </div>
             </div>
         </div>
