new changes are done

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
-                <li><a href="./img/home/Jyoti-Kumari-Resume.pdf" download><a target="_blank"
-                    href="https://drive.google.com/file/d/13L6OYIrzC24WZfZszSOmGFauPL3snFEK/view?usp=share_link">Resume </a></li>
+                <li><a id="resumeDownload1" target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="fw19_1145_Mayank_Saxena_Resume">Resume </a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -46,7 +45,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Mayank Saxena</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a id="resumeDownload"  target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="fw19_1145_Mayank_Saxena_Resume" > Download Resume </a>
+                <a id="resumeDownload2"  target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="fw19_1145_Mayank_Saxena_Resume" > Download Resume </a>
             </div>
         </div>
     </section>
