new changes are done 2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <!-- <li><a href="#services" class="menu-btn">Services</a></li> -->
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#Tech-Stack" class="menu-btn">Skills</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
                 <li><a id="resumeDownload1" target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="fw19_1145_Mayank_Saxena_Resume">Resume </a></li>
@@ -103,7 +103,7 @@
 
     <!-- skills section start -->
 
-    <section class="teams" id="teams">
+    <section class="teams" id="Tech-Stack">
         <div class="max-width">
             <h2 class="title">Tech-Stack</h2>
             <div class="tools">
