new changes are done 3

--- a/index.html
+++ b/index.html
@@ -139,27 +139,27 @@
             <div class="tools">
                 <div class="tool tool-img-s tool-img-s-java ">
                     <img src="./images/int.jfif" alt="">
-                    <h3>Java</h3>
+                    <h3>IntelliJ</h3>
                 </div>
                 <div class="tool tool-img-s">
                     <img src="./images/spring tool.jfif" alt="">
-                    <h3>Hibernate</h3>
+                    <h3>SpringTool</h3>
                 </div>
                 <div class="tool tool-img-s">
                     <img src="./images/sql.png" alt="">
-                    <h3>Spring Boot</h3>
+                    <h3>MySql</h3>
                 </div>
                 <div class="tool ">
                     <img src="./images/vscode.jfif" alt="">
-                    <h3>HTML</h3>
+                    <h3>VS Code</h3>
                 </div>
                 <div class="tool">
                     <img src="./images/git.png" alt="">
-                    <h3>CSS</h3>
+                    <h3>Git</h3>
                 </div>
                 <div class="tool">
                     <img src="./images/github.png" alt="">
-                    <h3>JavaScript</h3>
+                    <h3>GitHub</h3>
                 </div>
             </div>
         </div>
