new changes done again 2" ; ;

--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
                 GitHubCalendar(".calendar", "mynk2906", { responsive: true });
             </script>
         
-        <div class = "stats1"><p align="center" style="margin-top:10px"><img align="center" class = "stats1" src="https://github-readme-stats.vercel.app/api?username=mynk2906&show_icons=true&locale=en" alt="mynk2906" /></p></div>
+        <!-- <div class = "stats1"><p align="center" style="margin-top:10px"><img align="center" class = "stats1" src="https://github-readme-stats.vercel.app/api?username=mynk2906&show_icons=true&locale=en" alt="mynk2906" /></p></div>
 
-        <div class = "stats2"><p align="center" style="margin-top:10px" ><img class = "stats2" src="https://github-readme-streak-stats.herokuapp.com/?user=mynk2906&" alt="mynk2906" /></p></div>
+        <div class = "stats2"><p align="center" style="margin-top:10px" ><img class = "stats2" src="https://github-readme-streak-stats.herokuapp.com/?user=mynk2906&" alt="mynk2906" /></p></div> -->
     </section>
 
 
