--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="#Tech-Stack" class="menu-btn">Skills</a></li>
                 <li><a href="#project" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
-                <li><a id="resumeDownload1" target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="fw19_1145_Mayank_Saxena_Resume">Resume </a></li>
+                <li><a id="resumeDownload1" target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="Mayank_Saxena_Resume">Resume </a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
