--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Mayank Saxena</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a id="resumeDownload2"  target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="fw19_1145_Mayank_Saxena_Resume" > Download Resume </a>
+                <a id="resumeDownload2"  target="_blank" href="images/Mayank_Saxena_Resume.pdf" download="Mayank_Saxena_Resume" > Download Resume </a>
             </div>
         </div>
     </section>
